--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,6 +19,28 @@
         </div>
         {% endfor %}
 
+            {% for post in posts %}
+            <div>
+            	<p>published: {{post.published_date}}</p>
+
+            {{post}}
+            
+            <h2><a href="">{{post.title}}</a></h2>
+            <p>{{post.text|linebreaksbr}}</p>
+        </div>
+        {% endfor %}
+
+            {% for post in posts %}
+            <div>
+            	<p>published: {{post.published_date}}</p>
+
+            {{post}}
+            
+            <h2><a href="">{{post.title}}</a></h2>
+            <p>{{post.text|linebreaksbr}}</p>
+        </div>
+        {% endfor %}
+
 
         <h1>Some titel</h1>
         <div>
